MMA-8832 Prefaktorering
- Trekk ut mapping av dokumentinfo og dokumentvariant i egne metoder
- Sjekk dokumenttilgang kun en gang pr dokument under mapping